--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -12,7 +12,7 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  @apply bg-white dark:bg-gray-950 font-[poppins];
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
@@ -131,6 +131,6 @@ body {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-[poppins];
   }
 }
